--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,10 @@ spring.datasource.username=postgres
 spring.datasource.password=230218
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=drop-and-create
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
+
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+spring.security.oauth2.client.registration.swagger-ui=none
+springdoc.swagger-ui.path=/swagger-ui.html
