switch to spring data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 spring.security.oauth2.client.registration.swagger-ui=none
 springdoc.swagger-ui.path=/swagger-ui.html
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
