--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://prod-database-url:5432/gym
-spring.datasource.username=produser
-spring.datasource.password=prodpass
+spring.datasource.url=jdbc:postgresql://localhost:5432/gym_prod
+spring.datasource.username=postgres
+spring.datasource.password=230218
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -10,5 +10,5 @@ spring.jpa.hibernate.ddl-auto=validate
 springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=false
 
-management.endpoints.web.exposure.include=health,info
-management.endpoint.health.show-details=never
+management.endpoints.web.exposure.include=health, info, prometheus
+management.endpoint.health.show-details=when_authorized
