--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,15 @@
 spring.application.name=CRMSystem
 
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym
-spring.datasource.username=postgres
-spring.datasource.password=230218
+api.trainee.url=http://localhost:8080/trainees/
+api.trainee.health.username=trainee.HealthUsername
+api.trainee.health.password=testpassword
+api.trainee.threshold=1000
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
-spring.security.oauth2.client.registration.swagger-ui=none
-springdoc.swagger-ui.path=/swagger-ui.html
+api.trainer.url=http://localhost:8080/trainers/
+api.trainer.health.username=trainer.HealthUsername
+api.trainer.health.password=testpassword
+api.trainer.threshold=1000
 
 
-management.endpoints.web.exposure.include=*
-management.endpoint.health.show-details=always
+
 
