--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,7 +4,7 @@ spring.datasource.password=230218
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 springdoc.api-docs.enabled=true
