Додано CI/CD з GitHub Actions

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/gym_prod
-spring.datasource.username=postgres
-spring.datasource.password=230218
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
@@ -10,5 +10,5 @@ spring.jpa.hibernate.ddl-auto=validate
 springdoc.api-docs.enabled=false
 springdoc.swagger-ui.enabled=false
 
-management.endpoints.web.exposure.include=health, info, prometheus
+management.endpoints.web.exposure.include=health,info,prometheus
 management.endpoint.health.show-details=when_authorized
