--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=CRMSystem
 
+spring.profiles.active=@activatedProperties@
+
+
 api.trainee.url=http://localhost:8080/trainees/
 api.trainee.health.username=trainee.HealthUsername
 api.trainee.health.password=testpassword
