--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,31 @@ on:
     branches: [main]
 
 jobs:
-  build-test:
+  build:
+    name: Build project
     runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Give permission to Maven Wrapper
+        run: chmod +x mvnw
+
+      - name: Build project
+        run: ./mvnw clean compile
+
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
+    needs: build
+
     services:
       postgres:
         image: postgres:13
@@ -46,8 +69,9 @@ jobs:
         run: ./mvnw test -Dspring.profiles.active=prod
 
   docker-build:
+    name: Docker build
     runs-on: ubuntu-latest
-    needs: build-test
+    needs: test
 
     steps:
       - name: Checkout code
