--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
         run: ./mvnw test -Dspring.profiles.active=prod
 
   docker-build:
-    name: Docker build check
+    name: Docker Build and Push
     runs-on: ubuntu-latest
     needs: test
 
@@ -77,8 +77,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build JAR file
         run: ./mvnw package -DskipTests
 
-      - name: Build Docker image
-        run: docker build -t my-spring-app .
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: gratilovakatrin/my-spring-app:latest
