--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -98,3 +98,15 @@ jobs:
           context: .
           push: true
           tags: gratilovakatrin/my-spring-app:latest
+
+  deploy:
+    name: Deploy to Render
+    runs-on: ubuntu-latest
+    needs: docker-build
+
+    steps:
+      - name: Trigger deploy on Render
+        run: |
+          curl -X POST "https://api.render.com/deploy/srv-d0vlv3ripnbc73824l0g" \
+            -H "Authorization: Bearer ${{ secrets.RENDER_API_KEY }}" \
+            -H "Accept: application/json"
